# terminal_assistant

./: README.md  main.py  pyproject.toml
.github/: CODEOWNERS
