[project]
name = "terminal-assistant"
version = "0.1.0"
description = "AI-powered terminal assistant with Claude Opus 4.6 streaming"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.scripts]
terminal-assistant = "main:main"

[tool.uv]
# The runtime venv is managed in ~/.terminal_assistant/venv (self-bootstrapped).
# This section controls the development environment only.
python-preference = "only-managed"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
